platform/gitops/components/networking/istio/mesh-security/peer-authentication-argocd-redis.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: argocd-redis-permissive
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "4.4"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis
  mtls:
    mode: PERMISSIVE
