platform/gitops/components/networking/istio/mesh-security/peer-authentication-cert-manager-webhook.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: cert-manager-webhook-permissive
  namespace: cert-manager
  annotations:
    argocd.argoproj.io/sync-wave: "4.4"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: webhook
      app.kubernetes.io/instance: cert-manager
  mtls:
    mode: PERMISSIVE
