platform/gitops/components/networking/istio/mesh-security/peer-authentication-default.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mesh-default
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: "4.5"
spec:
  mtls:
    mode: STRICT
