platform/gitops/components/networking/istio/mesh-security/peer-authentication-external-secrets-webhook.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: external-secrets-webhook-permissive
  namespace: external-secrets
  annotations:
    argocd.argoproj.io/sync-wave: "4.4"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-webhook
  mtls:
    mode: PERMISSIVE
