platform/gitops/components/networking/istio/mesh-security/peer-authentication-ingressgateway.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: ingressgateway-permissive
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: "4.5"
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  mtls:
    mode: PERMISSIVE
