platform/gitops/components/networking/istio/mesh-security/destination-rule-argocd-redis-ha-announce-2.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: argocd-redis-ha-announce-2
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: "4.6"
spec:
  host: argo-cd-redis-ha-announce-2.argocd.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
