platform/gitops/components/networking/istio/mesh-security/destination-rule-harbor-postgres.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: harbor-postgres
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: "4.55"
spec:
  host: postgres-rw.harbor.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
