platform/gitops/components/networking/istio/mesh-security/destination-rule-keycloak-postgres.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: keycloak-postgres
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: "4.55"
spec:
  host: keycloak-postgres-rw.keycloak.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
