platform/gitops/components/networking/istio/mesh-security/destination-rule-kube-apiserver.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kube-apiserver
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: "4.6"
spec:
  host: kubernetes.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
